updated html for landing page

--- a/bloc/my-portfolio/index.html
+++ b/bloc/my-portfolio/index.html
@@ -5,57 +5,61 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio | Rachel Beiser</title>
   <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/main.css">
  </head>
   <body>
+    <div class="container">
     <nav>
        <div class="logo">
-          <img src="Images/RB-Logo.png">
+          <img src="Images/RB-Logo.png" width="50" height="50">
        </div>
        <div class="menu-bar">
          <ul>
            <li>
-            <a href="">Work</a>
+            <a href="" class="button-2">RESUME</a>
            </li>
            <li>
-            <a href="">About</a>
+            <a href="" class="button-2">ABOUT</a>
            </li>
            <li>
-            <a href="">Resume</a>
+            <a href="" class="button-2">WORK</a>
            </li>
          </ul>
        </div>
      </nav>
    <section class="hero">
-      <h1 class="my-name"> Hi, I'm Rachel!</h1>
+      <h1 class="my-name">Hi, I'm Rachel!</h1>
       <h2 class="slogan">I use the power of design to humanize technology and enhance people’s lives.</h2>
       <h3 class="location">CURRENTLY BASED IN THE NYC METRO AREA</h3>
    </section>
+   </div>
    <section class="case-studies">
+   <div class="container2">
+     <img src="Images/mobile-landing.png">
      <div class="cubby-project">
-       <img src="Images/Landing-page-image.png">
        <h4 class="project-name">CUBBY</h4>
-       <p>A cloud storage app for students built to optimize organization and productivity.</p>
+       <p class="cubby-description">A cloud storage app for students built to optimize organization and productivity.</p>
+       <img class="landing" src="Images/Mobile-landing-page.png">
        <a href="cubby.html" class="button">VIEW CASE STUDY</a>
      </div>
    </section>
+   </div>
    <footer>
-     <div class="social-bar">
-       <ul>
+     <p class="two">Get in touch!</p>
+       <ul class="social-bar">
          <li>
-           <a href="mailto:rtschechter@gmail.com"><img src="Images/Mail-icon.png"></a>
+           <a href="mailto:rtschechter@gmail.com" class="social"><img src="Images/Mail-icon.png"></a>
          </li>
          <li>
-           <a href="https://www.linkedin.com/in/rachelbeiser/"><img src="Images/LinkedIn.png"></a>
+           <a href="https://www.linkedin.com/in/rachelbeiser/" class="social"><img src="Images/LinkedIn.png"></a>
          </li>
          <li>
-           <a href="https://www.instagram.com/r.beiser/"><img src="Images/Instagram.png"></a>
+           <a href="https://www.instagram.com/r.beiser/" class="social"><img src="Images/Instagram.png"></a>
          </li>
          <li>
-           <a href="https://github.com/rschechter"><img src="Images/Github.png"></a>
+           <a href="https://github.com/rschechter" class="social"><img src="Images/Github.png"></a>
          </li>
        </ul>
-     </div>
      <div class="copywrite-info">
        <p>© 2018 Rachel Beiser | Designed and Developed by Rachel Beiser</p>
      </div>
